--- a/lists/approvedBookingList.json
+++ b/lists/approvedBookingList.json
@@ -11,7 +11,7 @@
             "hrefParam": "",
             "rules": [],
             "label": "Booking",
-            "href": "facilityBookingList",
+            "href": "facilities_book",
             "confirmation": "",
             "link-css-display-type": "btn btn-sm btn-primary",
             "datalist_type": "row_action",
