Update list approvedBookingList.

--- a/lists/approvedBookingList.json
+++ b/lists/approvedBookingList.json
@@ -8,10 +8,31 @@
         {
             "filterable": true,
             "hidden": "false",
-            "name": "id",
-            "id": "column_1",
+            "renderHtml": "",
+            "format": {
+                "className": "",
+                "properties": {}
+            },
             "label": "ID",
-            "sortable": "false"
+            "sortable": "false",
+            "datalist_type": "column",
+            "exclude_export": "",
+            "name": "id",
+            "width": "",
+            "headerAlignment": "",
+            "action": {
+                "className": "org.joget.apps.datalist.lib.HyperlinkDataListAction",
+                "properties": {
+                    "hrefColumn": "createdByName",
+                    "hrefParam": "id",
+                    "href": "FacilitiesBookingRequestForm",
+                    "confirmation": "",
+                    "target": "_self"
+                }
+            },
+            "style": "",
+            "id": "column_1",
+            "alignment": ""
         },
         {
             "filterable": true,
@@ -19,7 +40,8 @@
             "name": "createdByName",
             "id": "column_3",
             "label": "Created By Name",
-            "sortable": "false"
+            "sortable": "false",
+            "datalist_type": "column"
         },
         {
             "filterable": true,
