--- a/lists/approvedBookingList.json
+++ b/lists/approvedBookingList.json
@@ -23,7 +23,7 @@
             "action": {
                 "className": "org.joget.apps.datalist.lib.HyperlinkDataListAction",
                 "properties": {
-                    "hrefColumn": "createdByName",
+                    "hrefColumn": "id",
                     "hrefParam": "id",
                     "href": "FacilitiesBookingRequestForm",
                     "confirmation": "",
@@ -50,14 +50,8 @@
             "width": "",
             "headerAlignment": "",
             "action": {
-                "className": "org.joget.apps.datalist.lib.HyperlinkDataListAction",
-                "properties": {
-                    "hrefColumn": "createdByName",
-                    "hrefParam": "id",
-                    "href": "FacilitiesBookingRequestForm",
-                    "confirmation": "",
-                    "target": "_self"
-                }
+                "className": "",
+                "properties": {}
             },
             "style": "",
             "id": "column_3",
