--- a/forms/bookingApprovalForm.json
+++ b/forms/bookingApprovalForm.json
@@ -63,6 +63,8 @@
         }],
         "className": "org.joget.apps.form.model.Section",
         "properties": {
+            "header-style-background-color": "#8632E9",
+            "style-background-color": "#C496FA",
             "visibilityControl": "",
             "permissionReadonly": "",
             "permission": {
