--- a/forms/bookingApprovalForm.json
+++ b/forms/bookingApprovalForm.json
@@ -34,6 +34,7 @@
                             "className": "",
                             "properties": {}
                         },
+                        "style-color": "#000000",
                         "options": [
                             {
                                 "label": "Approve",
