Update form acknowledgementApproval.

--- a/forms/acknowledgementApproval.json
+++ b/forms/acknowledgementApproval.json
@@ -32,11 +32,13 @@
             "style-background-color": "#C496FA",
             "visibilityControl": "",
             "permissionReadonly": "",
+            "header-style-border-color": "#000000",
             "permission": {
                 "className": "",
                 "properties": {}
             },
             "label": "Acknowledgement Approval",
+            "style-border-color": "#000000",
             "reverse": "",
             "storeBinder": {
                 "className": "",
