Update list approvedBookingList.

--- a/lists/approvedBookingList.json
+++ b/lists/approvedBookingList.json
@@ -6,8 +6,7 @@
     "rowActions": [],
     "columns": [
         {
-            "header-style-background-color": "#8632E9",
-            "style-background-color": "#C496FA",
+            "style-background-color": "#BEE3FB",
             "filterable": true,
             "hidden": "false",
             "renderHtml": "",
@@ -39,7 +38,6 @@
             "filterable": true,
             "hidden": "false",
             "renderHtml": "",
-            "style-color": "#000000",
             "format": {
                 "className": "",
                 "properties": {}
