--- a/lists/approvedBookingList.json
+++ b/lists/approvedBookingList.json
@@ -93,15 +93,6 @@
             "extraCondition": ""
         }
     },
-    "actions": [{
-        "className": "org.joget.plugin.enterprise.BeanShellDatalistAction",
-        "id": "action_0",
-        "properties": {
-            "label": "BeanShell",
-            "confirmation": "",
-            "datalist_type": "action",
-            "script": "// Ensure the code runs after the DOM is fully loaded\r\n$(document).ready(function() {\r\n\r\n    // --- Option 1: Change background color and add a border to the .table-wrapper ---\r\n    // This will likely affect the area immediately around the table, creating a \"side\" effect.\r\n    $('.table-wrapper').css({\r\n        'background-color': '#f8f8f8', // A very light gray background for the wrapper\r\n        'border': '2px solid #cccccc',  // A light gray border around the wrapper\r\n        'padding': '10px'               // Add some padding so the background/border is visible around the table\r\n    });\r\n\r\n    // Optional: To ensure the table itself doesn't have its own conflicting background\r\n    $('.table-wrapper table').css('background-color', 'transparent');\r\n\r\n\r\n    // --- Option 2: Change the border of the <table> element itself ---\r\n    // This will directly put a border around the table's rows and columns.\r\n    $('table.xrounded_shadowed.responsivetable').css({\r\n        'border': '2px solid #555555', // Dark gray border\r\n        'border-collapse': 'collapse'  // Essential for table borders to behave nicely\r\n    });\r\n\r\n    // Optional: To ensure individual cells also inherit or have their own border for a consistent look\r\n    $('table.xrounded_shadowed.responsivetable th, table.xrounded_shadowed.responsivetable td').css({\r\n        'border': '1px solid #dddddd' // Lighter border for cells\r\n    });\r\n\r\n\r\n    // --- Option 3: Change the background of the main list container ---\r\n    // If the \"side\" you refer to is the entire area where the list is displayed,\r\n    // you might need to target the div with data-cbuilder-id=\"approvedBookinglist\".\r\n    $('div[data-cbuilder-id=\"approvedBookinglist\"]').css({\r\n        'background-color': '#e0e0e0', // A slightly darker gray background for the overall list area\r\n        'padding': '20px',             // Add padding to make the background visible around the table wrapper\r\n        'border': '1px solid #999999'  // Optional: add a border to this outer container\r\n    });\r\n\r\n});"
-        }
-    }],
+    "actions": [],
     "order": ""
 }
