--- a/lists/approvedBookingList.json
+++ b/lists/approvedBookingList.json
@@ -3,6 +3,9 @@
         "className": "",
         "properties": {}
     },
+    "considerFilterWhenGetTotal": "",
+    "useSession": "",
+    "responsiveMode": "",
     "rowActions": [],
     "columns": [
         {
@@ -79,12 +82,20 @@
             "alignment": ""
         }
     ],
+    "draggabletable": "",
+    "cardCollapsible": "",
     "pageSize": "0",
-    "orderBy": "",
+    "orderBy": "dateCreated",
     "description": "",
     "filters": [],
+    "showDataWhenFilterSet": "",
     "pageSizeSelectorOptions": "10,20,30,40,50,100",
+    "hidePageSize": "",
+    "disableResponsive": "",
+    "cardCollapseByDefault": "",
     "name": "Approved Booking List",
+    "rowActionsMode": "",
+    "showhidecolumns": "",
     "id": "approvedBookingList",
     "binder": {
         "className": "org.joget.apps.datalist.lib.FormRowDataListBinder",
@@ -94,5 +105,5 @@
         }
     },
     "actions": [],
-    "order": ""
+    "order": "1"
 }
