--- a/lists/newApprovedBookingList.json
+++ b/lists/newApprovedBookingList.json
@@ -1,18 +1,120 @@
 {
-    "rowActions": [],
-    "columns": [],
-    "name": "New Approved Booking List",
-    "pageSize": "0",
-    "orderBy": "",
-    "description": "",
-    "id": "newApprovedBookingList",
-    "filters": [],
-    "binder": {
-        "name": "",
+    "template": {
         "className": "",
         "properties": {}
     },
-    "actions": [],
+    "considerFilterWhenGetTotal": "",
+    "useSession": "",
+    "responsiveMode": "",
+    "rowActions": [],
+    "columns": [
+        {
+            "filterable": true,
+            "hidden": "false",
+            "name": "id",
+            "id": "column_4",
+            "label": "ID",
+            "sortable": "false"
+        },
+        {
+            "filterable": true,
+            "hidden": "false",
+            "name": "createdByName",
+            "id": "column_2",
+            "label": "Created By Name",
+            "sortable": "false"
+        },
+        {
+            "filterable": true,
+            "hidden": "false",
+            "name": "facilityName",
+            "id": "column_3",
+            "label": "Facility Name",
+            "sortable": "false"
+        },
+        {
+            "filterable": true,
+            "hidden": "false",
+            "name": "date",
+            "id": "column_5",
+            "label": "Date",
+            "sortable": "false"
+        },
+        {
+            "filterable": true,
+            "hidden": "false",
+            "name": "time",
+            "id": "column_6",
+            "label": "Time",
+            "sortable": "false"
+        },
+        {
+            "filterable": true,
+            "hidden": "false",
+            "name": "noOfParticipants",
+            "id": "column_7",
+            "label": "No. of Participants",
+            "sortable": "false"
+        },
+        {
+            "filterable": true,
+            "hidden": "false",
+            "name": "specialRequest",
+            "id": "column_8",
+            "label": "Special Request",
+            "sortable": "false"
+        },
+        {
+            "filterable": true,
+            "hidden": "false",
+            "name": "status",
+            "id": "column_9",
+            "label": "status",
+            "sortable": "false",
+            "datalist_type": "column"
+        }
+    ],
+    "draggabletable": "",
+    "cardCollapsible": "",
+    "pageSize": "0",
+    "orderBy": "date",
+    "description": "",
+    "filters": [],
+    "showDataWhenFilterSet": "",
     "pageSizeSelectorOptions": "10,20,30,40,50,100",
-    "order": ""
+    "hidePageSize": "",
+    "disableResponsive": "",
+    "cardCollapseByDefault": "",
+    "name": "New Approved Booking List",
+    "rowActionsMode": "",
+    "showhidecolumns": "",
+    "id": "newApprovedBookingList",
+    "binder": {
+        "className": "org.joget.plugin.enterprise.AdvancedFormRowDataListBinder",
+        "properties": {
+            "joins": [],
+            "aggregateField": [],
+            "formDefId": "FacilitiesBookingRequestForm",
+            "customSelectionValue": "",
+            "extraCondition": "",
+            "filters": [
+                {
+                    "field": "status",
+                    "join": "OR",
+                    "value": "Approved",
+                    "operator": "="
+                },
+                {
+                    "field": "status",
+                    "join": "OR",
+                    "value": "Rejected",
+                    "operator": "="
+                }
+            ],
+            "groupBy": "",
+            "functionColumns": []
+        }
+    },
+    "actions": [],
+    "order": "1"
 }
