Update list approvedBookingList.

--- a/lists/approvedBookingList.json
+++ b/lists/approvedBookingList.json
@@ -93,7 +93,7 @@
     "hidePageSize": "",
     "disableResponsive": "",
     "cardCollapseByDefault": "",
-    "name": "Approved Booking List (Manager)",
+    "name": "Approved Facility Booking List (Manager)",
     "rowActionsMode": "",
     "showhidecolumns": "",
     "id": "approvedBookingList",
