Update list newApprovedBookingList.

--- a/lists/newApprovedBookingList.json
+++ b/lists/newApprovedBookingList.json
@@ -106,7 +106,7 @@
     "draggabletable": "",
     "cardCollapsible": "",
     "pageSize": "0",
-    "orderBy": "",
+    "orderBy": "dateCreated",
     "description": "",
     "filters": [
         {
