--- a/lists/approvedBookingList.json
+++ b/lists/approvedBookingList.json
@@ -36,6 +36,29 @@
             "filterable": true,
             "hidden": "false",
             "renderHtml": "",
+            "format": {
+                "className": "",
+                "properties": {}
+            },
+            "label": "Date Created",
+            "sortable": "false",
+            "datalist_type": "column",
+            "exclude_export": "",
+            "name": "dateCreated",
+            "width": "",
+            "headerAlignment": "",
+            "action": {
+                "className": "",
+                "properties": {}
+            },
+            "style": "",
+            "id": "column_2",
+            "alignment": ""
+        },
+        {
+            "filterable": true,
+            "hidden": "false",
+            "renderHtml": "",
             "style-color": "#000000",
             "format": {
                 "className": "",
